--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <title>Explore sem Limites</title>
 </head>
 <body>
+  <section id="hero">
+    <div class="astronaut">
+      <img src="./assets/astronaut.png" alt="astronaut">
+    </div>
+    <div class="hero-text">
+      <h1>Explore sem Limites</h1>
+      <p>Porque o aprendizado e contino</p>
+      <a href="#" class="button-down">
+        <img src="./assets/arrow-down.svg" alt="">
+      </a>
+    </div>
+  </section>
+
   
 </body>
 </html>
