--- a/index.html
+++ b/index.html
@@ -1,26 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="style.css">
-  <title>Explore sem Limites</title>
-</head>
-<body>
-  <section id="hero">
-    <div class="astronaut">
-      <img src="./assets/astronaut.png" alt="astronaut">
-    </div>
-    <div class="hero-text">
-      <h1>Explore sem Limites</h1>
-      <p>Porque o aprendizado e contino</p>
-      <a href="#" class="button-down">
-        <img src="./assets/arrow-down.svg" alt="">
-      </a>
-    </div>
-  </section>
+    <link rel="stylesheet" href="style.css" />
+    <title>Explore sem Limites</title>
+  </head>
+  <body>
+    <section id="hero">
+      <div class="astronaut">
+        <img src="./assets/astronaut.png" alt="astronaut" />
+      </div>
+      <div class="hero-text">
+        <h1>Explore sem Limites</h1>
+        <p>Porque o aprendizado e contino</p>
+        <a href="#" class="button-down">
+          <img src="./assets/arrow-down.svg" alt="" />
+        </a>
+      </div>
+    </section>
 
-  
-</body>
+    <section id="cards">
+      <div class="card">
+        <img src="./assets/yellow-moon.png" alt="" />
+        <div class="card-text">
+          <h3>Não pare nunca</h3>
+          <p>
+            Se você deseja ter sucesso nos estudos, é fundamental que você adote
+            uma mentalidade de "não pare nunca". Estudar de forma consistente e
+            contínua é a chave para o progresso e a conquista de seus objetivos.
+          </p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="./assets/blue-moon.png" alt="" />
+        <div class="card-text">
+          <h3>Só volta</h3>
+          <p>
+            Se você parou ou perdeu o ritmo em alguma atividade ou projeto,
+            saiba que nunca é tarde para recomeçar. Às vezes, as circunstâncias
+            podem mudar, ou podemos nos sentir desmotivados ou sobrecarregados.
+          </p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="./assets/pink-moon.png" alt="" />
+        <div class="card-text">
+          <h3>Siga seu ritmo</h3>
+          <p>
+            Avançar pouco a pouco mantém progresso constante em objetivos,
+            evitando parar ou desistir. Mesmo pequenos passos nos aproximam do
+            destino e motivam a continuidade. Não subestime o poder de cada ação
+            rumo ao objetivo final.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section div="contact">
+      <form action="">
+        <h2>Entre em contato</h2>
+        <fieldset>
+          <div class="input-wrapper">
+            <input type="text" id="name" placeholder="Seu nome" />
+          </div>
+          <div class="input-wrapper">
+            <input type="email" id="email" placeholder="Email" />
+          </div>
+          <div class="input-wrapper">
+            <textarea placeholder="Digite seu mensagem aqui..."></textarea>
+          </div>
+        </fieldset>
+
+        <button class="button">Enviar Mensagem</button>
+      </form>
+    </section>
+    <footer>
+      <p>&copy; - JefersonTamono.Dev</p>
+    </footer>
+  </body>
 </html>
