--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="hero-text">
         <h1>Explore sem Limites</h1>
         <p>Porque o aprendizado e contino</p>
-        <a href="#" class="button-down">
+        <a href="#cards" class="button-down">
           <img src="./assets/arrow-down.svg" alt="" />
         </a>
       </div>
@@ -67,8 +67,8 @@
       </div>
     </section>
 
-    <section div="contact">
-      <form action="">
+    <section id="contact">
+      <form>
         <h2>Entre em contato</h2>
         <fieldset>
           <div class="input-wrapper">
@@ -84,6 +84,7 @@
 
         <button class="button">Enviar Mensagem</button>
       </form>
+      <div class="stars"></div>
     </section>
     <footer>
       <p>&copy; - JefersonTamono.Dev</p>
